Add closing elements and fix indentation

--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                         </div>
                     </div>
                 </li>
-                <li id="Pascal_course">
+                <li id="pascal_course">
                     <div class="about_online">
                         <h1>Pascal</h1>
 
@@ -477,8 +477,9 @@
 
                             <p>Poziom<br>podstawowy</p>
                         </div>
-                     </li>
-                             <li id="Scratch_Junior">
+                    </div>
+                </li>
+                <li id="scratch_junior">
                     <div class="about_online">
                         <h1>Scratch Junior</h1>
 
@@ -519,8 +520,9 @@
 
                             <p>Poziom<br>podstawowy</p>
                         </div>
+                    </div>
                 </li>
-                        <li id="Codecademy_platform">
+                <li id="codecademy_platform">
                     <div class="about_online">
                         <h1>Codecademy</h1>
 
@@ -562,8 +564,9 @@
 
                             <p>Poziom<br>podstawowy, średniozaawansowany</p>
                         </div>
+                    </div>
                 </li>
-                <li id="Programmr_platform">
+                <li id="programmr_platform">
                     <div class="about_online">
                         <h1>Programmr</h1>
 
@@ -603,6 +606,7 @@
 
                             <p>Poziom<br>średniozaawansowany, zaawansowany</p>
                         </div>
+                    </div>
                 </li>
                 <li id="edX_platform">
                     <div class="about_online">
@@ -647,7 +651,7 @@
                         </div>
                     </div>
                 </li>
-                      <li id="Udemy_platform">
+                <li id="udemy_platform">
                     <div class="about_online">
                         <h1>Udemy</h1>
 
@@ -687,8 +691,9 @@
 
                             <p>Poziom<br>podstawowy, średniozaawansowany, zaawansowany</p>
                         </div>
+                    </div>
                 </li>
-                   <li id="teaching_tree">
+                <li id="teaching_tree">
                     <div class="about_online">
                         <h1>Teaching Tree</h1>
 
@@ -728,8 +733,9 @@
 
                             <p>Poziom<br>średniozaawansowany, zaawansowany </p>
                         </div>
+                    </div>
                 </li>
-                <li id="Women_toCode">
+                <li id="women_toCode">
                     <div class="about_online">
                         <h1>Kobiety do Kodu: kurs Javy</h1>
 
