Remove redundant block of code from <head>

--- a/index.html
+++ b/index.html
@@ -3,49 +3,7 @@
 <head>
     <title>Programowanie to przyszłość. Poznaj świat kodowania i nowych technologii!</title>
 
-    <meta charset="utf-8">     </li>
-                <li id="programmers_forge">
-                    <div class="about_online">
-                        <h1>C++ z Kuźni Programistów</h1>
-
-                        <p>Kuźnia Programistów to projekt, powstały aby dać szansę na naukę programowania osobom, które 
-                        wcześniej tego nie robiły. Kurs ten przeznaczony jest przede wszystkim dla osób, które chcą zmienić swój zawód.</p>
-
-                        <h2>Kursy</h2>
-
-                        <p>Kurs dla osób początkujących. Uczy podstaw programowania na podstawie języka C++. 
-                        Język ten jest językiem wieloparadygmatowym.  Oznacza to, że można w nim stosować jednocześnie różne style programowania, 
-                        w tym programowanie proceduralne, obiektowe. Powstał jako rozszerzenie języka C o obiektowe mechanizmy abstrakcji danych i silną statyczną kontrolę typów</p>
-                    </div>
-                    <div class="icons_online">
-                        <div class="link">
-                            <a href="http://www.kuzniaprogramistow.pl/course/2" target="_blank"><img src="assets/carousel_icons/link.png" alt="Strona"/>
-
-                                <p>Strona</p>
-                            </a>
-                        </div>
-                        <div class="cost">
-                            <img src="assets/carousel_icons/cost.png" alt="Koszt"/>
-
-                            <p>Za darmo</p>
-                        </div>
-                        <div class="age">
-                            <img src="assets/carousel_icons/age.png" alt="Wiek"/>
-
-                            <p>Nie określono</p>
-                        </div>
-                        <div class="language">
-                            <img src="assets/carousel_icons/language.png" alt="Język"/>
-
-                            <p>Polski</p>
-                        </div>
-                        <div class="level">
-                            <img src="assets/carousel_icons/easy.png" alt="Poziom"/>
-
-                            <p>Poziom<br>podstawowy</p>
-                        </div>
-                    </div>
-                </li>
+    <meta charset="utf-8">
     <meta name="description" content="Koduj.com jest skierowane dla wszystkich zainteresowanych nauką programowania. Naszym celem jest promocja nowych technologii, dzielenie się wiedzą i zwiększanie kompetencji uczniów, nauczycieli i wolontariuszy.">
     <meta name="keywords" content="programowanie, kurs programowania, warsztaty programowania, nowe technologie, warsztaty, kodowanie, szkoła, informatyka, nauka programowania, języki programowania, programista, lekcje informatyki, kluby kodowania, klub programowania, programowanie gier komputerowych, robotyka, Java, C#, PHP, Delphi, C++, Scratch, program edukacyjny">
     <meta name="author" content="Zespół Koduj.com">
