added Kasia Stempniak

--- a/sekcje/badz_jak_oni.html
+++ b/sekcje/badz_jak_oni.html
@@ -2,12 +2,13 @@
 <li class="carousel-content">
     <div class="profile">
         <div class="profile_pic">
-            <img src="assets/stempniak.png" alt="Paweł Stempniak"/>
+            <img src="assets/gontarekkrystian.png" alt="Krystian Gontarek"/>
         </div>
         <div class="profile_info">
-            <div class="name">Paweł Stempniak</div>
-            <div class="about">PR-owiec i ekspert komunikacji w nowych mediach, przedsiębiorca, trener i
-                wykładowca
+            <div class="name">Krystian Gontarek</div>
+            <div class="about">Krystian Gontarek, 13 lat, programista, startupowiec. Rozwija trzy projekty: KidGifter
+                - lista prezentów dla dzieci, GameTeller - system do polecania gier, Kids On Bits - warsztaty z
+                tworzenia stron dla dzieci.
             </div>
         </div>
     </div>
@@ -15,27 +16,87 @@
         <div class="full_description">
             <h1>Powinieneś uczyć się programowania, bo…</h1>
 
-            <p>Wcale nie po to by zostać programistą. Owszem możesz nim zostać, ale umiejętność programowania
-                otworzy przed Tobą możliwości w niemal każdej dziedzinie. Od finansów, przez sztukę po medycynę czy
-                tuning samochodów. Problem polega na tym, że nie ma co liczyć na to, że programowania nauczą nas w
-                szkole. Chociaż… może to i dobrze?</p>
-
-            <p>W internecie można znaleźć mnóstwo kursów programowania. Darmowych! Z pomocą przychodzą też
-                organizacje i fundacje. Dzięki łatwo dostępnej wiedzy, także tej specjalistycznej, można w tej
-                dziedzinie zajść naprawdę daleko. Relatywnie szybko nabyć umiejętności, które pozwolą na samodzielne
-                realizowanie różnorodnych projektów, rozwijanie pasji, ciekawą pracę i zarabianie pieniędzy. </p>
+            <p>to ułatwia życie. Na przykład w szkole wiele rzeczy znacznie szybciej pojmuję, jeśli zaczynam analizować
+                problemy sposobami, które poznałem podczas nauki programowania. Poza tym, do niektórych zadań domowych z
+                matematyki piszę sobie czasem skrypty, żeby szybciej wykonały za mnie obliczenia.
+            </p>
         </div>
         <div class="programming_benefits">
             <h1>Dzięki programowaniu…</h1>
 
-            <p>Poznajemy sposób, w jaki działają urządzenia, które nas otaczają, i z których korzystamy niemal
-                nonstop.</p>
+            <p>mogę przeistaczać swoje pomysły w coś, co działa, np. gry, strony internetowe oraz narzędzia, które
+                pomagają mi w różnych sprawach, np. przy odrabianiu lekcji. Dorośli traktują mnie także trochę poważniej :)
+            </p>
+        </div>
+    </div>
+</li>
+<li class="carousel-content">
+    <div class="profile">
+        <div class="profile_pic">
+            <img src="assets/stempniak.png" alt="Paweł Stempniak"/>
+        </div>
+        <div class="profile_info">
+            <div class="name">Paweł Stempniak</div>
+            <div class="about">
+                Paweł jest geek tatą - co tłumaczy fakt, że prowadzi blog GeekTata.pl.
+                Opisuje w nim perypetie taty i dzieci w świecie nowych technologii.
+                „Po godzinach” prowadzi agencję komunikacji w nowych mediach WhiteBits.pl.
+            </div>
+        </div>
+    </div>
+    <div class="description">
+        <div class="full_description">
+            <h1>Powinieneś uczyć się programowania, bo…</h1>
 
-            <p>Przestajemy być ich niewolnikami, możemy je kontrolować. A być może nawet tworzyć z ich pomocą coś
-                zupełnie nowego - zaprogramować robota, który będzie pilnował Twojego domu. Albo lodówkę, która
-                będzie Cię informowała, ile możesz zjeść w zależności od ilości wykonanych danego dnia aktywności
-                fizycznych. Brzmi kosmicznie? Takich rzeczy można się podejmować będąc zaledwie początkującym
-                programistą.</p>
+            <p>
+                W internecie można znaleźć mnóstwo kursów programowania. Darmowych! Z pomocą przychodzą też organizacje i
+                fundacje. Dzięki łatwo dostępnej wiedzy, także tej specjalistycznej, można w tej dziedzinie zajść naprawdę daleko.
+                Relatywnie szybko nabyć umiejętności, które pozwolą na samodzielne realizowanie różnorodnych projektów,
+                rozwijanie pasji, ciekawą pracę i zarabianie pieniędzy.
+            </p>
+        </div>
+        <div class="programming_benefits">
+            <h1>Dzięki programowaniu…</h1>
+
+            <p>
+                Przestajemy być niewolnikami narzedzi, które nas otaczają i możemy je kontrolować.
+                A być może nawet tworzyć z ich pomocą coś zupełnie nowego - zaprogramować robota,
+                który będzie pilnował Twojego domu. Albo lodówkę, która będzie Cię informowała,
+                ile możesz zjeść w zależności od ilości wykonanych danego dnia aktywności fizycznych.
+                Brzmi kosmicznie? Takich rzeczy można się podejmować będąc zaledwie początkującym programistą.
+            </p>
+        </div>
+    </div>
+</li>
+<li class="carousel-content">
+    <div class="profile">
+        <div class="profile_pic">
+            <img src="assets/Kasia_Stempniak.png" alt="Kasia Stempniak" style="" class="gray"/>
+        </div>
+        <div class="profile_info">
+            <div class="name">Kasia Stempniak</div>
+            <div class="about">
+                Mama 2-letniej Poli i 4-letniego Leo, który lubi gry logiczne i zabawy w
+                "programowanie" offline. Kasia jest m.in. koordynatorką podlaskiej edycji
+                Geek Girls Carrots, czyli społeczności kobiet kochających nowe technologie.
+            </div>
+        </div>
+    </div>
+    <div class="description">
+        <div class="full_description">
+            <h1>Powinieneś uczyć się programowania, bo…</h1>
+
+            <p>
+                Wcale nie po to by zostać programistą. Owszem możesz nim zostać, ale umiejętność
+                programowania otworzy przed Tobą możliwości w niemal każdej dziedzinie.
+                Od finansów, przez sztukę po medycynę czy tuning samochodów.
+            </p>
+            <p>Problem polega na tym, że nie ma co liczyć na to, że programowania nauczą nas w szkole. Chociaż… może to i dobrze? </p>
+        </div>
+        <div class="programming_benefits">
+            <h1>Dzięki programowaniu…</h1>
+
+            <p>Poznajemy sposób, w jaki działają urządzenia, które nas otaczają, i z których korzystamy niemal nonstop. </p>
         </div>
     </div>
 </li>
@@ -69,37 +130,6 @@
                 Programowanie może mieć formę gry logicznej, w której mając pewien zestaw narzędzi musimy dotrzeć do
                 wyznaczonego celu. Kodowanie daje niesamowitą możliwość tworzenia i urzeczywistniania rzeczy, które
                 wcześniej żyły tylko w głowie. Programowanie pozwala mi pomagać innym ludziom.</p>
-        </div>
-    </div>
-</li>
-<li class="carousel-content">
-    <div class="profile">
-        <div class="profile_pic">
-            <img src="assets/gontarekkrystian.png" alt="Krystian Gontarek"/>
-        </div>
-        <div class="profile_info">
-            <div class="name">Krystian Gontarek</div>
-            <div class="about">Krystian Gontarek, 13 lat, programista, startupowiec. Rozwija trzy projekty: KidGifter
-                - lista prezentów dla dzieci, GameTeller - system do polecania gier, Kids On Bits - warsztaty z
-                tworzenia stron dla dzieci.
-            </div>
-        </div>
-    </div>
-    <div class="description">
-        <div class="full_description">
-            <h1>Powinieneś uczyć się programowania, bo…</h1>
-
-            <p>to ułatwia życie. Na przykład w szkole wiele rzeczy znacznie szybciej pojmuję, jeśli zaczynam analizować
-                problemy sposobami, które poznałem podczas nauki programowania. Poza tym, do niektórych zadań domowych z
-                matematyki piszę sobie czasem skrypty, żeby szybciej wykonały za mnie obliczenia.
-            </p>
-        </div>
-        <div class="programming_benefits">
-            <h1>Dzięki programowaniu…</h1>
-
-            <p>mogę przeistaczać swoje pomysły w coś, co działa, np. gry, strony internetowe oraz narzędzia, które
-                pomagają mi w różnych sprawach, np. przy odrabianiu lekcji. Dorośli traktują mnie także trochę poważniej :)
-            </p>
         </div>
     </div>
 </li>
