Change the pictures for be like them section
 * Change greyscale pictures for color

--- a/sekcje/badz_jak_oni.html
+++ b/sekcje/badz_jak_oni.html
@@ -71,7 +71,7 @@
 <li class="carousel-content">
     <div class="profile">
         <div class="profile_pic">
-            <img src="assets/Kasia_Stempniak.png" alt="Kasia Stempniak" style="" class="gray"/>
+            <img src="assets/stempniakkasia.png" alt="Kasia Stempniak" style=""/>
         </div>
         <div class="profile_info">
             <div class="name">Kasia Stempniak</div>
